<resources>
    <string name="button_back">Back</string>
    <string name="button_close">Close</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="button_confirm">Confirm</string>

    <string name="msg_functionality_na_with_reason">Functionality not available as %s.</string>
    <string name="msg_functionality_soon">Functionality not yet implemented!</string>
    <string name="msg_date_picker_range_error">Out of range</string>

    <string name="date_range_picker_dialog_title">Select range</string>
    <string name="date_range_picker_dialog_date_placeholder">Start date — End date</string>
    <string name="date_range_picker_dialog_start_label">Start</string>
    <string name="date_range_picker_dialog_end_label">End</string>

    <string name="cd_date_picker_text_field">Date input</string>
    <string name="cd_date_range_start_text_field">Start date input</string>
    <string name="cd_date_range_end_text_field">End date input</string>

    <string name="tt_common_loading_screen">LoadingScreen</string>
    <string name="tt_common_time_picker_digit_hr">TimePickerHourDigit</string>
    <string name="tt_common_time_picker_digit_min">TimePickerMinuteDigit</string>
    <string name="date_picker_default_label">Date</string>
</resources>